# omnidome

./: .gitignore  .gitmodules  AboutGL_8cpp.html  AboutGL_8cpp__incl.map  AboutGL_8cpp__incl.md5  AboutGL_8h.html  AboutGL_8h__dep__incl.map  AboutGL_8h__dep__incl.md5  AboutGL_8h__incl.map  AboutGL_8h__incl.md5  AboutGL_8h_source.html  About_8cpp.html  About_8cpp__incl.map  About_8cpp__incl.md5  About_8h.html  About_8h__dep__incl.map  About_8h__dep__incl.md5  About_8h__incl.map  About_8h__incl.md5  About_8h_source.html  AbstractInputWidget_8cpp.html  AbstractInputWidget_8cpp__incl.map  AbstractInputWidget_8cpp__incl.md5  AbstractInputWidget_8h.html  AbstractInputWidget_8h__dep__incl.map  AbstractInputWidget_8h__dep__incl.md5  AbstractInputWidget_8h__incl.map  AbstractInputWidget_8h__incl.md5  AbstractInputWidget_8h_source.html  AngleSetup_8cpp.html  AngleSetup_8cpp__incl.map  AngleSetup_8cpp__incl.md5  AngleSetup_8h.html  AngleSetup_8h__dep__incl.map  AngleSetup_8h__dep__incl.md5  AngleSetup_8h__incl.map  AngleSetup_8h__incl.md5  AngleSetup_8h_source.html  Angle_8cpp.html  Angle_8cpp__incl.map  (+2354 more)
app/: About.cpp  About.h  AboutGL.cpp  AboutGL.h  Application.cpp  Application.h  Blend.cpp  Blend.h  BrushPreview.cpp  CMakeLists.txt  Canvas.cpp  Canvas.h  ColorCorrection.cpp  ColorCorrection.h  DockWidget.cpp  DockWidget.h  Export.cpp  Export.h  FullscreenTuningGLView.cpp  FullscreenTuningGLView.h  Input.cpp  Input.h  MainWindow.cpp  MainWindow.h  Mapping.cpp  Mapping.h  OutputPreview.cpp  OutputPreview.h  PluginList.cpp  PluginList.h  RecentSessions.cpp  RecentSessions.h  Scene.cpp  Scene.h  SceneGLView.cpp  SceneGLView.h  ScreenItem.cpp  ScreenItem.h  ScreenSetup.cpp  ScreenSetup.h  (+19 more)
app/data/: Info.plist
app/mixin/: DataModel.h  ParameterWidget.h  TransformedRect.h  TuningFromIndex.h
app/proj/: ChannelCorrectionParameters.cpp  ChannelCorrectionParameters.h  ColorCorrectionGraph.cpp  ColorCorrectionGraph.h  TitleBar.cpp  TitleBar.h  Tuning.cpp  Tuning.h  TuningLayout.cpp  TuningLayout.h  TuningList.cpp  TuningList.h
app/rc/: omnidome.qrc  stylesheet.qss
app/rc/shaders/: slow_fractal.frag
lib/: CMakeLists.txt
lib/include/: omnic++.h  omnic.h
lib/include/boostx/: factory.hpp  type_info.hpp
lib/include/omni/: BlendBrush.h  BlendMask.h  BlendSettings.h  Buffer.h  Factory.h  Id.h  LengthUnit.h  PixelConverter.h  PluginInfo.h  PluginLoader.h  Session.h  TypeIdInterface.h  TypeIdMemory.h  WarpGrid.h  WarpPoint.h  exception.h  global.h  namespaces.h  util.h
lib/include/omni/canvas/: Dome.h  Envelope.h  Interface.h  util.h
lib/include/omni/geometry/: AffineTransform.h  Angle.h  Box.h  EulerAngles.h  PolarVec.h  Vertex.h  Vertex2D.h
lib/include/omni/input/: Framebuffer.h  Interface.h  List.h
lib/include/omni/mapping/: Interface.h
lib/include/omni/media/: Image.h  Location.h
lib/include/omni/proj/: Calibration.h  CalibrationMode.h  Calibrator.h  Channel.h  ChannelCorrection.h  ColorCorrection.h  Frustum.h  Projector.h  ScreenSetup.h  Tuning.h  TuningList.h
lib/include/omni/render/: CalibratedProjector.h  ExportSettings.h  Renderer.h
lib/include/omni/serialization/: Interface.h  PropertyMap.h  PropertyMapSerializer.h  container.h  pointer.h
lib/include/omni/visual/: BoundingBox.h  Box.h  CameraInterface.h  Circle.h  ContextBoundPtr.h  ContextSwitch.h  Grid.h  Interface.h  Light.h  PerspectiveCamera.h  Plane.h  Projector.h  ProjectorViewMode.h  Rectangle.h  Scene.h  Session.h  Shader.h  Sphere.h  Tracker.h  Tuning.h  UniformHandler.h  VBO.h  VertexVBO.h  WarpGrid.h  util.h
lib/include/omnic/: CalibratedProjector.h  Calibration.h  CalibratorInterface.h  ChannelCorrection.h  ColorCorrection.h  ColorCorrectionLOT.h  PixelData.h  Rect.h  UVDBPixel.h  Version.h  qt.h  render.h  util.h
lib/include/omnic/gl/: Framebuffer.h  Renderer.h  ShaderObject.h  Texture.h  TextureRef.h  functions.h  shader.h  types.h
lib/include/omnic/qt/: Output.h  ScreenWidget.h  util.h  wrapper.h
lib/src/: BlendBrush.cpp  BlendMask.cpp  BlendSettings.cpp  Id.cpp  PluginInfo.cpp  PluginLoader.cpp  Session.cpp  WarpPoint.cpp  util.cpp
lib/src/canvas/: Envelope.cpp  Interface.cpp
lib/src/geometry/: Angle.cpp  Box.cpp  EulerAngles.cpp  PolarVec.cpp  Vertex.cpp  Vertex2D.cpp
lib/src/input/: Interface.cpp  List.cpp
lib/src/mapping/: Interface.cpp
lib/src/media/: Location.cpp
lib/src/proj/: Calibration.cpp  ColorCorrection.cpp  Frustum.cpp  Projector.cpp  ScreenSetup.cpp  Tuning.cpp  TuningList.cpp
lib/src/render/: ExportSettings.cpp  Renderer.cpp
lib/src/shaders/: blend.vert  colorcorrection.h  frustum.frag  grayscale.h  grid.frag  texture.frag  textureRect.frag
lib/src/visual/: BoundingBox.cpp  Box.cpp  ContextSwitch.cpp  Interface.cpp  Light.cpp  PerspectiveCamera.cpp  Plane.cpp  Projector.cpp  Rectangle.cpp  Scene.cpp  Session.cpp  Shader.cpp  Sphere.cpp  Tracker.cpp  Tuning.cpp  VBO.cpp  VertexVBO.cpp  util.cpp
plugins/input/Spout/: CMakeLists.txt  Spout.cpp  Spout.h
plugins/input/Spout/SpoutSDK/: SpoutGLDXinterop.cpp  SpoutSDK.h  SpoutSenderNames.cpp  readme.txt
plugins/input/Syphon/: CMakeLists.txt  Syphon.h  Syphon.mm  SyphonNameboundClient.m  SyphonServerDescription.h  SyphonServerItemModel.cpp  SyphonServerManager.h  SyphonServerManager.mm  SyphonWidget.cpp  SyphonWidget.h  build.cmake  postbuild.cmake
src/plugins/ffgl/: CMakeLists.txt  FFGL.h  FFGLExtensions.h  FFGLFBO.h  FFGLLib.h  FFGLPluginInfo.h  FFGLPluginManager.h  FFGLPluginManager_inl.h  FFGLPluginSDK.h  FFGLShader.h  FreeFrame.h  ShaderParam.h
src/plugins/ffgl/FFGLOmniUVW/: FFGLOmniUVW.cpp  FFGLOmniUVW.h  OmniUVWShaderSource.h
src/plugins/ffgl/src/: FFGL.cpp  FFGLExtensions.cpp  FFGLFBO.cpp  FFGLPluginInfo.cpp  FFGLPluginInfoData.cpp  FFGLPluginManager.cpp  (+2 more)
test/glwindow/: CMakeLists.txt  main.cpp  projectionwindow.cpp  projectionwindow.h
widgetlib/: CMakeLists.txt
widgetlib/src/: AffineTransform.cpp  CanvasParameters.cpp  ColorSet.cpp  Dial.cpp  ExceptionList.cpp  GLView.cpp  InputPreview.cpp  ParameterWidget.cpp  RangedFloat.cpp  RangedInt.cpp  Rotation.cpp  omni_ui_ExceptionList.ui
(+1119 files in other folders)
